cluster-init-apps/argo-cd/templates/server-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    argocd.argoproj.io/sync-wave: "20"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.framsburg.dev`) && PathPrefix(`/`)
      priority: 10
      services:
        - name: argo-cd-argocd-server
          port: 80
  #    - kind: Rule
  #      match: Host(`argocd.framsburg.dev`) && Header(`Content-Type`, `application/grpc`)
  #      priority: 11
  #      services:
  #        - name: argo-cd-argocd-server
  #          port: 80
  #          scheme: h2c
  tls:
    secretName: argocd-framsburg-dev-tls
